--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -124,6 +124,7 @@ div.narrow {
   font-weight: bold;
   font-size: 30px;
   color: white;
+  align-items: center;
 }
 
 .large .three p {
@@ -142,6 +143,7 @@ div.narrow {
   font-weight: bold;
   font-size: 30px;
   color: white;
+  align-items: center;
 }
 
 #horizontal {
@@ -161,7 +163,7 @@ div.narrow {
   font-weight: bold;
   font-size: 30px;
   color: white;
-  justify-content: center;
+  align-items: center;
 }
 
 /* third column setup */
